# sidescroll_dev

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exec.txt  main.cpp
src/: animation.cpp  animation.hpp  collectible.cpp  collectible.hpp  config.h  door.cpp  door.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  parallax.h  player.cpp  player.hpp
